# third_party_abseil-cpp

./: 0001-add-loongarch-suopport-for-abseil-cpp.patch  0002-PR-1644-unscaledcycleclock-remove-RISC-V-support.patch  BUILD.gn  OAT.xml  README.OpenSource  abseil-cpp-20210324.2-sw.patch  abseil-cpp.spec  adapter-ohos.patch  backport-CVE-2025-0838.patch  bundle.json  configure_copts.gni  fix-mac-complier-error.patch  fix-mingw-complier-error.patch  install.sh  install_for_mac.sh  install_mac.sh  install_no_lock.sh
