# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./configure_copts.gni")

libabseil_path = rebase_path("//third_party/abseil-cpp")

if (is_mac || is_ios) {
  exec_script("install_no_lock.sh", [ "$libabseil_path" ])
} else {
  exec_script("install.sh", [ "$libabseil_path" ])
}

config("absl_public_config") {
  include_dirs = [ "${ABSEIL_DIR}/" ]
}

ohos_shared_library("absl_base") {
  sources = [
    "${ABSEIL_DIR}/absl/base/internal/cycleclock.cc",
    "${ABSEIL_DIR}/absl/base/internal/low_level_alloc.cc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock.cc",
    "${ABSEIL_DIR}/absl/base/internal/strerror.cc",
    "${ABSEIL_DIR}/absl/base/internal/sysinfo.cc",
    "${ABSEIL_DIR}/absl/base/internal/thread_identity.cc",
    "${ABSEIL_DIR}/absl/base/internal/throw_delegate.cc",
    "${ABSEIL_DIR}/absl/base/internal/unscaledcycleclock.cc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]
  deps = [
    ":absl_log_severity",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
  ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_static_library("absl_base_static") {
  sources = [
    "${ABSEIL_DIR}/absl/algorithm/algorithm.h",
    "${ABSEIL_DIR}/absl/algorithm/container.h",
    "${ABSEIL_DIR}/absl/base/attributes.h",
    "${ABSEIL_DIR}/absl/base/call_once.h",
    "${ABSEIL_DIR}/absl/base/casts.h",
    "${ABSEIL_DIR}/absl/base/config.h",
    "${ABSEIL_DIR}/absl/base/const_init.h",
    "${ABSEIL_DIR}/absl/base/dynamic_annotations.h",
    "${ABSEIL_DIR}/absl/base/internal/atomic_hook.h",
    "${ABSEIL_DIR}/absl/base/internal/cycleclock.cc",
    "${ABSEIL_DIR}/absl/base/internal/cycleclock.h",
    "${ABSEIL_DIR}/absl/base/internal/cycleclock_config.h",
    "${ABSEIL_DIR}/absl/base/internal/direct_mmap.h",
    "${ABSEIL_DIR}/absl/base/internal/dynamic_annotations.h",
    "${ABSEIL_DIR}/absl/base/internal/endian.h",
    "${ABSEIL_DIR}/absl/base/internal/errno_saver.h",
    "${ABSEIL_DIR}/absl/base/internal/fast_type_id.h",
    "${ABSEIL_DIR}/absl/base/internal/hide_ptr.h",
    "${ABSEIL_DIR}/absl/base/internal/identity.h",
    "${ABSEIL_DIR}/absl/base/internal/inline_variable.h",
    "${ABSEIL_DIR}/absl/base/internal/invoke.h",
    "${ABSEIL_DIR}/absl/base/internal/low_level_alloc.cc",
    "${ABSEIL_DIR}/absl/base/internal/low_level_alloc.h",
    "${ABSEIL_DIR}/absl/base/internal/low_level_scheduling.h",
    "${ABSEIL_DIR}/absl/base/internal/nullability_impl.h",
    "${ABSEIL_DIR}/absl/base/internal/per_thread_tls.h",
    "${ABSEIL_DIR}/absl/base/internal/prefetch.h",
    "${ABSEIL_DIR}/absl/base/internal/pretty_function.h",
    "${ABSEIL_DIR}/absl/base/internal/raw_logging.cc",
    "${ABSEIL_DIR}/absl/base/internal/raw_logging.h",
    "${ABSEIL_DIR}/absl/base/internal/scheduling_mode.h",
    "${ABSEIL_DIR}/absl/base/internal/scoped_set_env.cc",
    "${ABSEIL_DIR}/absl/base/internal/scoped_set_env.h",
    "${ABSEIL_DIR}/absl/base/internal/spinlock.cc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock.h",
    "${ABSEIL_DIR}/absl/base/internal/spinlock_wait.cc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock_wait.h",
    "${ABSEIL_DIR}/absl/base/internal/strerror.cc",
    "${ABSEIL_DIR}/absl/base/internal/strerror.h",
    "${ABSEIL_DIR}/absl/base/internal/sysinfo.cc",
    "${ABSEIL_DIR}/absl/base/internal/sysinfo.h",
    "${ABSEIL_DIR}/absl/base/internal/thread_annotations.h",
    "${ABSEIL_DIR}/absl/base/internal/thread_identity.cc",
    "${ABSEIL_DIR}/absl/base/internal/thread_identity.h",
    "${ABSEIL_DIR}/absl/base/internal/throw_delegate.cc",
    "${ABSEIL_DIR}/absl/base/internal/throw_delegate.h",
    "${ABSEIL_DIR}/absl/base/internal/tsan_mutex_interface.h",
    "${ABSEIL_DIR}/absl/base/internal/unaligned_access.h",
    "${ABSEIL_DIR}/absl/base/internal/unscaledcycleclock.cc",
    "${ABSEIL_DIR}/absl/base/internal/unscaledcycleclock.h",
    "${ABSEIL_DIR}/absl/base/internal/unscaledcycleclock_config.h",
    "${ABSEIL_DIR}/absl/base/log_severity.cc",
    "${ABSEIL_DIR}/absl/base/log_severity.h",
    "${ABSEIL_DIR}/absl/base/macros.h",
    "${ABSEIL_DIR}/absl/base/nullability.h",
    "${ABSEIL_DIR}/absl/base/optimization.h",
    "${ABSEIL_DIR}/absl/base/options.h",
    "${ABSEIL_DIR}/absl/base/policy_checks.h",
    "${ABSEIL_DIR}/absl/base/port.h",
    "${ABSEIL_DIR}/absl/base/prefetch.h",
    "${ABSEIL_DIR}/absl/base/thread_annotations.h",
    "${ABSEIL_DIR}/absl/cleanup/cleanup.h",
    "${ABSEIL_DIR}/absl/cleanup/internal/cleanup.h",
    "${ABSEIL_DIR}/absl/container/btree_map.h",
    "${ABSEIL_DIR}/absl/container/btree_set.h",
    "${ABSEIL_DIR}/absl/container/fixed_array.h",
    "${ABSEIL_DIR}/absl/container/flat_hash_map.h",
    "${ABSEIL_DIR}/absl/container/flat_hash_set.h",
    "${ABSEIL_DIR}/absl/container/inlined_vector.h",
    "${ABSEIL_DIR}/absl/container/internal/btree.h",
    "${ABSEIL_DIR}/absl/container/internal/btree_container.h",
    "${ABSEIL_DIR}/absl/container/internal/common.h",
    "${ABSEIL_DIR}/absl/container/internal/common_policy_traits.h",
    "${ABSEIL_DIR}/absl/container/internal/compressed_tuple.h",
    "${ABSEIL_DIR}/absl/container/internal/container_memory.h",
    "${ABSEIL_DIR}/absl/container/internal/counting_allocator.h",
    "${ABSEIL_DIR}/absl/container/internal/hash_function_defaults.h",
    "${ABSEIL_DIR}/absl/container/internal/hash_policy_traits.h",
    "${ABSEIL_DIR}/absl/container/internal/hashtable_debug.h",
    "${ABSEIL_DIR}/absl/container/internal/hashtable_debug_hooks.h",
    "${ABSEIL_DIR}/absl/container/internal/hashtablez_sampler.cc",
    "${ABSEIL_DIR}/absl/container/internal/hashtablez_sampler.h",
    "${ABSEIL_DIR}/absl/container/internal/hashtablez_sampler_force_weak_definition.cc",
    "${ABSEIL_DIR}/absl/container/internal/inlined_vector.h",
    "${ABSEIL_DIR}/absl/container/internal/layout.h",
    "${ABSEIL_DIR}/absl/container/internal/node_slot_policy.h",
    "${ABSEIL_DIR}/absl/container/internal/raw_hash_map.h",
    "${ABSEIL_DIR}/absl/container/internal/raw_hash_set.cc",
    "${ABSEIL_DIR}/absl/container/internal/raw_hash_set.h",
    "${ABSEIL_DIR}/absl/container/internal/tracked.h",
    "${ABSEIL_DIR}/absl/container/node_hash_map.h",
    "${ABSEIL_DIR}/absl/container/node_hash_set.h",
    "${ABSEIL_DIR}/absl/crc/crc32c.cc",
    "${ABSEIL_DIR}/absl/crc/crc32c.h",
    "${ABSEIL_DIR}/absl/crc/internal/cpu_detect.cc",
    "${ABSEIL_DIR}/absl/crc/internal/cpu_detect.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc32_x86_arm_combined_simd.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc32c.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc32c_inline.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc_cord_state.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_cord_state.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc_internal.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc_memcpy.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc_memcpy_fallback.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_memcpy_x86_64.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_non_temporal_memcpy.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_x86_arm_combined.cc",
    "${ABSEIL_DIR}/absl/crc/internal/non_temporal_arm_intrinsics.h",
    "${ABSEIL_DIR}/absl/crc/internal/non_temporal_memcpy.h",
    "${ABSEIL_DIR}/absl/debugging/failure_signal_handler.cc",
    "${ABSEIL_DIR}/absl/debugging/failure_signal_handler.h",
    "${ABSEIL_DIR}/absl/debugging/internal/address_is_readable.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/address_is_readable.h",
    "${ABSEIL_DIR}/absl/debugging/internal/demangle.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/demangle.h",
    "${ABSEIL_DIR}/absl/debugging/internal/elf_mem_image.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/elf_mem_image.h",
    "${ABSEIL_DIR}/absl/debugging/internal/examine_stack.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/examine_stack.h",
    "${ABSEIL_DIR}/absl/debugging/internal/stack_consumption.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/stack_consumption.h",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_config.h",
    "${ABSEIL_DIR}/absl/debugging/internal/symbolize.h",
    "${ABSEIL_DIR}/absl/debugging/internal/vdso_support.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/vdso_support.h",
    "${ABSEIL_DIR}/absl/debugging/leak_check.cc",
    "${ABSEIL_DIR}/absl/debugging/leak_check.h",
    "${ABSEIL_DIR}/absl/debugging/stacktrace.cc",
    "${ABSEIL_DIR}/absl/debugging/stacktrace.h",
    "${ABSEIL_DIR}/absl/debugging/symbolize.cc",
    "${ABSEIL_DIR}/absl/debugging/symbolize.h",
    "${ABSEIL_DIR}/absl/functional/any_invocable.h",
    "${ABSEIL_DIR}/absl/functional/bind_front.h",
    "${ABSEIL_DIR}/absl/functional/function_ref.h",
    "${ABSEIL_DIR}/absl/functional/internal/any_invocable.h",
    "${ABSEIL_DIR}/absl/functional/internal/front_binder.h",
    "${ABSEIL_DIR}/absl/functional/internal/function_ref.h",
    "${ABSEIL_DIR}/absl/hash/hash.h",
    "${ABSEIL_DIR}/absl/hash/internal/city.cc",
    "${ABSEIL_DIR}/absl/hash/internal/city.h",
    "${ABSEIL_DIR}/absl/hash/internal/hash.cc",
    "${ABSEIL_DIR}/absl/hash/internal/hash.h",
    "${ABSEIL_DIR}/absl/hash/internal/low_level_hash.cc",
    "${ABSEIL_DIR}/absl/hash/internal/low_level_hash.h",
    "${ABSEIL_DIR}/absl/hash/internal/spy_hash_state.h",
    "${ABSEIL_DIR}/absl/log/absl_check.h",
    "${ABSEIL_DIR}/absl/log/absl_log.h",
    "${ABSEIL_DIR}/absl/log/check.h",
    "${ABSEIL_DIR}/absl/log/die_if_null.cc",
    "${ABSEIL_DIR}/absl/log/die_if_null.h",
    "${ABSEIL_DIR}/absl/log/globals.cc",
    "${ABSEIL_DIR}/absl/log/globals.h",
    "${ABSEIL_DIR}/absl/log/initialize.cc",
    "${ABSEIL_DIR}/absl/log/initialize.h",
    "${ABSEIL_DIR}/absl/log/internal/append_truncated.h",
    "${ABSEIL_DIR}/absl/log/internal/check_impl.h",
    "${ABSEIL_DIR}/absl/log/internal/check_op.cc",
    "${ABSEIL_DIR}/absl/log/internal/check_op.h",
    "${ABSEIL_DIR}/absl/log/internal/conditions.cc",
    "${ABSEIL_DIR}/absl/log/internal/conditions.h",
    "${ABSEIL_DIR}/absl/log/internal/config.h",
    "${ABSEIL_DIR}/absl/log/internal/globals.cc",
    "${ABSEIL_DIR}/absl/log/internal/globals.h",
    "${ABSEIL_DIR}/absl/log/internal/log_format.cc",
    "${ABSEIL_DIR}/absl/log/internal/log_format.h",
    "${ABSEIL_DIR}/absl/log/internal/log_impl.h",
    "${ABSEIL_DIR}/absl/log/internal/log_message.cc",
    "${ABSEIL_DIR}/absl/log/internal/log_message.h",
    "${ABSEIL_DIR}/absl/log/internal/log_sink_set.cc",
    "${ABSEIL_DIR}/absl/log/internal/log_sink_set.h",
    "${ABSEIL_DIR}/absl/log/internal/nullguard.cc",
    "${ABSEIL_DIR}/absl/log/internal/nullguard.h",
    "${ABSEIL_DIR}/absl/log/internal/nullstream.h",
    "${ABSEIL_DIR}/absl/log/internal/proto.cc",
    "${ABSEIL_DIR}/absl/log/internal/proto.h",
    "${ABSEIL_DIR}/absl/log/internal/strip.h",
    "${ABSEIL_DIR}/absl/log/internal/structured.h",
    "${ABSEIL_DIR}/absl/log/internal/voidify.h",
    "${ABSEIL_DIR}/absl/log/log.h",
    "${ABSEIL_DIR}/absl/log/log_entry.cc",
    "${ABSEIL_DIR}/absl/log/log_entry.h",
    "${ABSEIL_DIR}/absl/log/log_sink.cc",
    "${ABSEIL_DIR}/absl/log/log_sink.h",
    "${ABSEIL_DIR}/absl/log/log_sink_registry.h",
    "${ABSEIL_DIR}/absl/log/log_streamer.h",
    "${ABSEIL_DIR}/absl/log/structured.h",
    "${ABSEIL_DIR}/absl/memory/memory.h",
    "${ABSEIL_DIR}/absl/meta/type_traits.h",
    "${ABSEIL_DIR}/absl/numeric/bits.h",
    "${ABSEIL_DIR}/absl/numeric/int128.cc",
    "${ABSEIL_DIR}/absl/numeric/int128.h",
    "${ABSEIL_DIR}/absl/numeric/internal/bits.h",
    "${ABSEIL_DIR}/absl/numeric/internal/representation.h",
    "${ABSEIL_DIR}/absl/profiling/internal/exponential_biased.cc",
    "${ABSEIL_DIR}/absl/profiling/internal/exponential_biased.h",
    "${ABSEIL_DIR}/absl/profiling/internal/periodic_sampler.cc",
    "${ABSEIL_DIR}/absl/profiling/internal/periodic_sampler.h",
    "${ABSEIL_DIR}/absl/profiling/internal/sample_recorder.h",
    "${ABSEIL_DIR}/absl/random/bernoulli_distribution.h",
    "${ABSEIL_DIR}/absl/random/beta_distribution.h",
    "${ABSEIL_DIR}/absl/random/bit_gen_ref.h",
    "${ABSEIL_DIR}/absl/random/discrete_distribution.cc",
    "${ABSEIL_DIR}/absl/random/discrete_distribution.h",
    "${ABSEIL_DIR}/absl/random/distributions.h",
    "${ABSEIL_DIR}/absl/random/exponential_distribution.h",
    "${ABSEIL_DIR}/absl/random/gaussian_distribution.cc",
    "${ABSEIL_DIR}/absl/random/gaussian_distribution.h",
    "${ABSEIL_DIR}/absl/random/internal/distribution_caller.h",
    "${ABSEIL_DIR}/absl/random/internal/fast_uniform_bits.h",
    "${ABSEIL_DIR}/absl/random/internal/fastmath.h",
    "${ABSEIL_DIR}/absl/random/internal/generate_real.h",
    "${ABSEIL_DIR}/absl/random/internal/iostream_state_saver.h",
    "${ABSEIL_DIR}/absl/random/internal/nonsecure_base.h",
    "${ABSEIL_DIR}/absl/random/internal/pcg_engine.h",
    "${ABSEIL_DIR}/absl/random/internal/platform.h",
    "${ABSEIL_DIR}/absl/random/internal/pool_urbg.cc",
    "${ABSEIL_DIR}/absl/random/internal/pool_urbg.h",
    "${ABSEIL_DIR}/absl/random/internal/randen.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen.h",
    "${ABSEIL_DIR}/absl/random/internal/randen_detect.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_detect.h",
    "${ABSEIL_DIR}/absl/random/internal/randen_engine.h",
    "${ABSEIL_DIR}/absl/random/internal/randen_hwaes.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_hwaes.h",
    "${ABSEIL_DIR}/absl/random/internal/randen_round_keys.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_slow.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_slow.h",
    "${ABSEIL_DIR}/absl/random/internal/randen_traits.h",
    "${ABSEIL_DIR}/absl/random/internal/salted_seed_seq.h",
    "${ABSEIL_DIR}/absl/random/internal/seed_material.cc",
    "${ABSEIL_DIR}/absl/random/internal/seed_material.h",
    "${ABSEIL_DIR}/absl/random/internal/sequence_urbg.h",
    "${ABSEIL_DIR}/absl/random/internal/traits.h",
    "${ABSEIL_DIR}/absl/random/internal/uniform_helper.h",
    "${ABSEIL_DIR}/absl/random/internal/wide_multiply.h",
    "${ABSEIL_DIR}/absl/random/log_uniform_int_distribution.h",
    "${ABSEIL_DIR}/absl/random/poisson_distribution.h",
    "${ABSEIL_DIR}/absl/random/random.h",
    "${ABSEIL_DIR}/absl/random/seed_gen_exception.cc",
    "${ABSEIL_DIR}/absl/random/seed_gen_exception.h",
    "${ABSEIL_DIR}/absl/random/seed_sequences.cc",
    "${ABSEIL_DIR}/absl/random/seed_sequences.h",
    "${ABSEIL_DIR}/absl/random/uniform_int_distribution.h",
    "${ABSEIL_DIR}/absl/random/uniform_real_distribution.h",
    "${ABSEIL_DIR}/absl/random/zipf_distribution.h",
    "${ABSEIL_DIR}/absl/status/internal/status_internal.h",
    "${ABSEIL_DIR}/absl/status/internal/statusor_internal.h",
    "${ABSEIL_DIR}/absl/status/status.cc",
    "${ABSEIL_DIR}/absl/status/status.h",
    "${ABSEIL_DIR}/absl/status/status_payload_printer.cc",
    "${ABSEIL_DIR}/absl/status/status_payload_printer.h",
    "${ABSEIL_DIR}/absl/status/statusor.cc",
    "${ABSEIL_DIR}/absl/status/statusor.h",
    "${ABSEIL_DIR}/absl/strings/ascii.cc",
    "${ABSEIL_DIR}/absl/strings/ascii.h",
    "${ABSEIL_DIR}/absl/strings/charconv.cc",
    "${ABSEIL_DIR}/absl/strings/charconv.h",
    "${ABSEIL_DIR}/absl/strings/cord.cc",
    "${ABSEIL_DIR}/absl/strings/cord.h",
    "${ABSEIL_DIR}/absl/strings/cord_analysis.cc",
    "${ABSEIL_DIR}/absl/strings/cord_analysis.h",
    "${ABSEIL_DIR}/absl/strings/cord_buffer.cc",
    "${ABSEIL_DIR}/absl/strings/cord_buffer.h",
    "${ABSEIL_DIR}/absl/strings/escaping.cc",
    "${ABSEIL_DIR}/absl/strings/escaping.h",
    "${ABSEIL_DIR}/absl/strings/internal/char_map.h",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_bigint.cc",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_bigint.h",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_parse.cc",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_parse.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_data_edge.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_internal.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_internal.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree_navigator.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree_navigator.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree_reader.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree_reader.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_consume.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_consume.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_crc.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_crc.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_flat.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_ring.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_ring.h",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_ring_reader.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_functions.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_functions.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_handle.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_handle.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_info.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_info.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_sample_token.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_sample_token.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_statistics.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_update_scope.h",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_update_tracker.h",
    "${ABSEIL_DIR}/absl/strings/internal/damerau_levenshtein_distance.cc",
    "${ABSEIL_DIR}/absl/strings/internal/damerau_levenshtein_distance.h",
    "${ABSEIL_DIR}/absl/strings/internal/escaping.cc",
    "${ABSEIL_DIR}/absl/strings/internal/escaping.h",
    "${ABSEIL_DIR}/absl/strings/internal/has_absl_stringify.h",
    "${ABSEIL_DIR}/absl/strings/internal/memutil.cc",
    "${ABSEIL_DIR}/absl/strings/internal/memutil.h",
    "${ABSEIL_DIR}/absl/strings/internal/ostringstream.cc",
    "${ABSEIL_DIR}/absl/strings/internal/ostringstream.h",
    "${ABSEIL_DIR}/absl/strings/internal/pow10_helper.cc",
    "${ABSEIL_DIR}/absl/strings/internal/pow10_helper.h",
    "${ABSEIL_DIR}/absl/strings/internal/resize_uninitialized.h",
    "${ABSEIL_DIR}/absl/strings/internal/stl_type_traits.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/arg.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/arg.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/bind.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/bind.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/checker.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/constexpr_parser.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/extension.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/extension.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/float_conversion.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/float_conversion.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/output.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/output.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/parser.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/parser.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_join_internal.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_split_internal.h",
    "${ABSEIL_DIR}/absl/strings/internal/string_constant.h",
    "${ABSEIL_DIR}/absl/strings/internal/stringify_sink.cc",
    "${ABSEIL_DIR}/absl/strings/internal/stringify_sink.h",
    "${ABSEIL_DIR}/absl/strings/internal/utf8.cc",
    "${ABSEIL_DIR}/absl/strings/internal/utf8.h",
    "${ABSEIL_DIR}/absl/strings/match.cc",
    "${ABSEIL_DIR}/absl/strings/match.h",
    "${ABSEIL_DIR}/absl/strings/numbers.cc",
    "${ABSEIL_DIR}/absl/strings/numbers.h",
    "${ABSEIL_DIR}/absl/strings/str_cat.cc",
    "${ABSEIL_DIR}/absl/strings/str_cat.h",
    "${ABSEIL_DIR}/absl/strings/str_format.h",
    "${ABSEIL_DIR}/absl/strings/str_join.h",
    "${ABSEIL_DIR}/absl/strings/str_replace.cc",
    "${ABSEIL_DIR}/absl/strings/str_replace.h",
    "${ABSEIL_DIR}/absl/strings/str_split.cc",
    "${ABSEIL_DIR}/absl/strings/str_split.h",
    "${ABSEIL_DIR}/absl/strings/string_view.cc",
    "${ABSEIL_DIR}/absl/strings/string_view.h",
    "${ABSEIL_DIR}/absl/strings/strip.h",
    "${ABSEIL_DIR}/absl/strings/substitute.cc",
    "${ABSEIL_DIR}/absl/strings/substitute.h",
    "${ABSEIL_DIR}/absl/synchronization/barrier.cc",
    "${ABSEIL_DIR}/absl/synchronization/barrier.h",
    "${ABSEIL_DIR}/absl/synchronization/blocking_counter.cc",
    "${ABSEIL_DIR}/absl/synchronization/blocking_counter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/create_thread_identity.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/create_thread_identity.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/futex.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/futex_waiter.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/futex_waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/graphcycles.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/graphcycles.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/kernel_timeout.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/kernel_timeout.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/per_thread_sem.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/per_thread_sem.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/pthread_waiter.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/pthread_waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/sem_waiter.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/sem_waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/stdcpp_waiter.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/stdcpp_waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/thread_pool.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/waiter_base.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/waiter_base.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/win32_waiter.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/win32_waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/mutex.cc",
    "${ABSEIL_DIR}/absl/synchronization/mutex.h",
    "${ABSEIL_DIR}/absl/synchronization/notification.cc",
    "${ABSEIL_DIR}/absl/synchronization/notification.h",
    "${ABSEIL_DIR}/absl/time/civil_time.cc",
    "${ABSEIL_DIR}/absl/time/civil_time.h",
    "${ABSEIL_DIR}/absl/time/clock.cc",
    "${ABSEIL_DIR}/absl/time/clock.h",
    "${ABSEIL_DIR}/absl/time/duration.cc",
    "${ABSEIL_DIR}/absl/time/format.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/include/cctz/civil_time.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/include/cctz/civil_time_detail.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/include/cctz/time_zone.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/include/cctz/zone_info_source.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/civil_time_detail.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_fixed.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_fixed.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_format.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_if.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_if.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_impl.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_impl.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_info.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_info.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_libc.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_libc.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_lookup.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_posix.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_posix.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/tzfile.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/zone_info_source.cc",
    "${ABSEIL_DIR}/absl/time/time.cc",
    "${ABSEIL_DIR}/absl/time/time.h",
    "${ABSEIL_DIR}/absl/types/any.h",
    "${ABSEIL_DIR}/absl/types/bad_any_cast.cc",
    "${ABSEIL_DIR}/absl/types/bad_any_cast.h",
    "${ABSEIL_DIR}/absl/types/bad_optional_access.cc",
    "${ABSEIL_DIR}/absl/types/bad_optional_access.h",
    "${ABSEIL_DIR}/absl/types/bad_variant_access.cc",
    "${ABSEIL_DIR}/absl/types/bad_variant_access.h",
    "${ABSEIL_DIR}/absl/types/compare.h",
    "${ABSEIL_DIR}/absl/types/internal/conformance_aliases.h",
    "${ABSEIL_DIR}/absl/types/internal/conformance_archetype.h",
    "${ABSEIL_DIR}/absl/types/internal/conformance_profile.h",
    "${ABSEIL_DIR}/absl/types/internal/optional.h",
    "${ABSEIL_DIR}/absl/types/internal/parentheses.h",
    "${ABSEIL_DIR}/absl/types/internal/span.h",
    "${ABSEIL_DIR}/absl/types/internal/transform_args.h",
    "${ABSEIL_DIR}/absl/types/internal/variant.h",
    "${ABSEIL_DIR}/absl/types/optional.h",
    "${ABSEIL_DIR}/absl/types/span.h",
    "${ABSEIL_DIR}/absl/types/variant.h",
    "${ABSEIL_DIR}/absl/utility/internal/if_constexpr.h",
    "${ABSEIL_DIR}/absl/utility/utility.h",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]
  deps = []
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_raw_logging_internal") {
  branch_protector_ret = "pac_ret"
  sources = [ "${ABSEIL_DIR}/absl/base/internal/raw_logging.cc" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]
  deps = [ ":absl_log_severity" ]
  install_enable = true
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_log") {
  branch_protector_ret = "pac_ret"
  sources = [
    "${ABSEIL_DIR}/absl/log/absl_check.h",
    "${ABSEIL_DIR}/absl/log/die_if_null.cc",
    "${ABSEIL_DIR}/absl/log/globals.cc",
    "${ABSEIL_DIR}/absl/log/initialize.cc",
    "${ABSEIL_DIR}/absl/log/internal/check_op.cc",
    "${ABSEIL_DIR}/absl/log/internal/conditions.cc",
    "${ABSEIL_DIR}/absl/log/internal/globals.cc",
    "${ABSEIL_DIR}/absl/log/internal/log_format.cc",
    "${ABSEIL_DIR}/absl/log/internal/log_message.cc",
    "${ABSEIL_DIR}/absl/log/internal/log_sink_set.cc",
    "${ABSEIL_DIR}/absl/log/internal/nullguard.cc",
    "${ABSEIL_DIR}/absl/log/internal/nullguard.h",
    "${ABSEIL_DIR}/absl/log/internal/proto.cc",
    "${ABSEIL_DIR}/absl/log/log_sink.cc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]
  deps = [
    ":absl_base",
    ":absl_hash",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_stacktrace",
    ":absl_str_format_internal",
    ":absl_strings",
    ":absl_sync",
    ":absl_time",
    ":absl_time_zone",
  ]
  install_enable = true
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_log_severity") {
  sources = [ "${ABSEIL_DIR}/absl/base/log_severity.cc" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  public_configs = [ ":absl_public_config" ]
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_spinlock_wait") {
  sources = [
    "${ABSEIL_DIR}/absl/base/internal/spinlock_akaros.inc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock_linux.inc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock_posix.inc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock_wait.cc",
    "${ABSEIL_DIR}/absl/base/internal/spinlock_win32.inc",
  ]
  public_configs = [ ":absl_public_config" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_throw_delegate") {
  sources = [ "${ABSEIL_DIR}/absl/base/internal/throw_delegate.cc" ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS
  deps = [ ":absl_raw_logging_internal" ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_stacktrace") {
  sources = [
    "${ABSEIL_DIR}/absl/debugging/internal/address_is_readable.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/address_is_readable.h",
    "${ABSEIL_DIR}/absl/debugging/internal/elf_mem_image.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/examine_stack.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/examine_stack.h",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_aarch64-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_arm-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_config.h",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_generic-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_powerpc-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_unimplemented-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_win32-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/stacktrace_x86-inl.inc",
    "${ABSEIL_DIR}/absl/debugging/internal/vdso_support.cc",
    "${ABSEIL_DIR}/absl/debugging/stacktrace.cc",
    "${ABSEIL_DIR}/absl/debugging/stacktrace.h",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_base",
    ":absl_raw_logging_internal",
    ":absl_symbolize",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_symbolize") {
  sources = [
    "${ABSEIL_DIR}/absl/debugging/internal/demangle.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/elf_mem_image.cc",
    "${ABSEIL_DIR}/absl/debugging/internal/symbolize.h",
    "${ABSEIL_DIR}/absl/debugging/internal/vdso_support.cc",
    "${ABSEIL_DIR}/absl/debugging/symbolize.cc",
    "${ABSEIL_DIR}/absl/debugging/symbolize.h",
    "${ABSEIL_DIR}/absl/debugging/symbolize_darwin.inc",
    "${ABSEIL_DIR}/absl/debugging/symbolize_elf.inc",
    "${ABSEIL_DIR}/absl/debugging/symbolize_unimplemented.inc",
    "${ABSEIL_DIR}/absl/debugging/symbolize_win32.inc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_base",
    ":absl_raw_logging_internal",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_hash") {
  sources = [
    "${ABSEIL_DIR}/absl/hash/internal/city.cc",
    "${ABSEIL_DIR}/absl/hash/internal/city.h",
    "${ABSEIL_DIR}/absl/hash/internal/hash.cc",
    "${ABSEIL_DIR}/absl/hash/internal/hash.h",
    "${ABSEIL_DIR}/absl/hash/internal/low_level_hash.cc",
    "${ABSEIL_DIR}/absl/hash/internal/low_level_hash.h",
    "${ABSEIL_DIR}/absl/hash/internal/print_hash_of.cc",
    "${ABSEIL_DIR}/absl/hash/internal/spy_hash_state.h",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_base",
    ":absl_stacktrace",
    ":absl_symbolize",
    ":absl_time",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_int128") {
  sources = [
    "${ABSEIL_DIR}/absl/numeric/int128.cc",
    "${ABSEIL_DIR}/absl/numeric/int128_have_intrinsic.inc",
    "${ABSEIL_DIR}/absl/numeric/int128_no_intrinsic.inc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  public_configs = [ ":absl_public_config" ]
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_status") {
  sources = [
    "${ABSEIL_DIR}/absl/base/internal/strerror.cc",
    "${ABSEIL_DIR}/absl/status/status.cc",
    "${ABSEIL_DIR}/absl/status/status_payload_printer.cc",
    "${ABSEIL_DIR}/absl/status/statusor.cc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]

  #deps = [ "${ABSEIL_DIR}/absl/base:absl_raw_logging_internal" ]
  deps = [
    ":absl_cord",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_strings",
  ]

  install_enable = true

  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_statusor") {
  sources = [ "${ABSEIL_DIR}/absl/status/statusor.cc" ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS

  deps = [
    ":absl_cord",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_status",
    ":absl_strings",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true

  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

config("cflags_config") {
  cflags = [
    "-Wall",
    "-Wextra",
    "-Weverything",
    "-Wno-c++98-compat-pedantic",
    "-Wno-conversion",
    "-Wno-covered-switch-default",
    "-Wno-deprecated",
    "-Wno-disabled-macro-expansion",
    "-Wno-double-promotion",
    "-Wno-comma",
    "-Wno-extra-semi",
    "-Wno-extra-semi-stmt",
    "-Wno-packed",
    "-Wno-padded",
    "-Wno-sign-compare",
    "-Wno-float-conversion",
    "-Wno-float-equal",
    "-Wno-format-nonliteral",
    "-Wno-gcc-compat",
    "-Wno-global-constructors",
    "-Wno-exit-time-destructors",
    "-Wno-non-modular-include-in-module",
    "-Wno-old-style-cast",
    "-Wno-range-loop-analysis",
    "-Wno-reserved-id-macro",
    "-Wno-shorten-64-to-32",
    "-Wno-switch-enum",
    "-Wno-thread-safety-negative",
    "-Wno-unknown-warning-option",
    "-Wno-unreachable-code",
    "-Wno-unused-macros",
    "-Wno-weak-vtables",
    "-Wno-zero-as-null-pointer-constant",
    "-Wbitfield-enum-conversion",
    "-Wbool-conversion",
    "-Wconstant-conversion",
    "-Wenum-conversion",
    "-Wint-conversion",
    "-Wliteral-conversion",
    "-Wnon-literal-null-conversion",
    "-Wnull-conversion",
    "-Wobjc-literal-conversion",
    "-Wno-sign-conversion",
    "-Wstring-conversion",
    "-DNOMINMAX",
    "-Wno-reserved-identifier",
    "-Wno-unused-template",
    "-Wno-unknown-pragmas",
    "-Wno-c++17-attribute-extensions",
    "-Wno-cast-function-type",
    "-Wno-atomic-implicit-seq-cst",
  ]

  # Adapating DEBUG version, FIX ME
  # https://gitee.com/openharmony/build/pulls/1206/files
  defines = [ "NDEBUG" ]
}

ohos_shared_library("absl_strings") {
  branch_protector_ret = "pac_ret"
  sources = [
    "${ABSEIL_DIR}/absl/strings/ascii.cc",
    "${ABSEIL_DIR}/absl/strings/charconv.cc",
    "${ABSEIL_DIR}/absl/strings/escaping.cc",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_bigint.cc",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_bigint.h",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_parse.cc",
    "${ABSEIL_DIR}/absl/strings/internal/charconv_parse.h",
    "${ABSEIL_DIR}/absl/strings/internal/escaping.cc",
    "${ABSEIL_DIR}/absl/strings/internal/memutil.cc",
    "${ABSEIL_DIR}/absl/strings/internal/memutil.h",
    "${ABSEIL_DIR}/absl/strings/internal/stl_type_traits.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_join_internal.h",
    "${ABSEIL_DIR}/absl/strings/internal/str_split_internal.h",
    "${ABSEIL_DIR}/absl/strings/match.cc",
    "${ABSEIL_DIR}/absl/strings/numbers.cc",
    "${ABSEIL_DIR}/absl/strings/str_cat.cc",
    "${ABSEIL_DIR}/absl/strings/str_cat.h",
    "${ABSEIL_DIR}/absl/strings/str_replace.cc",
    "${ABSEIL_DIR}/absl/strings/str_split.cc",
    "${ABSEIL_DIR}/absl/strings/string_view.cc",
    "${ABSEIL_DIR}/absl/strings/substitute.cc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]
  configs = [ ":cflags_config" ]
  deps = [
    ":absl_int128",
    ":absl_raw_logging_internal",
    ":absl_strings_internal",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_strings_internal") {
  branch_protector_ret = "pac_ret"
  sources = [
    "${ABSEIL_DIR}/absl/strings/internal/ostringstream.cc",
    "${ABSEIL_DIR}/absl/strings/internal/utf8.cc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]

  configs = [ ":cflags_config" ]

  deps = [
    ":absl_raw_logging_internal",
    ":absl_throw_delegate",
  ]
  install_enable = true
  innerapi_tags = [ "platformsdk_indirect" ]
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_cord") {
  sources = [
    "${ABSEIL_DIR}/absl/crc/crc32c.cc",
    "${ABSEIL_DIR}/absl/crc/crc32c.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc32c.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc32c_inline.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc_cord_state.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_memcpy.h",
    "${ABSEIL_DIR}/absl/crc/internal/crc_memcpy_fallback.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_non_temporal_memcpy.cc",
    "${ABSEIL_DIR}/absl/crc/internal/crc_x86_arm_combined.cc",
    "${ABSEIL_DIR}/absl/debugging/stacktrace.cc",
    "${ABSEIL_DIR}/absl/profiling/internal/exponential_biased.cc",
    "${ABSEIL_DIR}/absl/strings/cord.cc",
    "${ABSEIL_DIR}/absl/strings/cord_analysis.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_internal.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree_navigator.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_btree_reader.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_consume.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_crc.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cord_rep_ring.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_functions.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_handle.cc",
    "${ABSEIL_DIR}/absl/strings/internal/cordz_info.cc",
    "${ABSEIL_DIR}/absl/strings/internal/stringify_sink.cc",
    "${ABSEIL_DIR}/absl/synchronization/mutex.cc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]

  configs = [ ":cflags_config" ]

  deps = [
    ":absl_base",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_stacktrace",
    ":absl_strings",
    ":absl_symbolize",
    ":absl_sync",
    ":absl_throw_delegate",
    ":absl_time",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_str_format_internal") {
  sources = [
    "${ABSEIL_DIR}/absl/strings/internal/str_format/arg.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/bind.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/extension.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/float_conversion.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/output.cc",
    "${ABSEIL_DIR}/absl/strings/internal/str_format/parser.cc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]

  configs = [ ":cflags_config" ]

  deps = [
    ":absl_int128",
    ":absl_strings",
  ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_sync") {
  sources = [
    "${ABSEIL_DIR}/absl/synchronization/barrier.cc",
    "${ABSEIL_DIR}/absl/synchronization/barrier.h",
    "${ABSEIL_DIR}/absl/synchronization/blocking_counter.cc",
    "${ABSEIL_DIR}/absl/synchronization/blocking_counter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/create_thread_identity.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/create_thread_identity.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/futex.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/futex_waiter.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/futex_waiter.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/graphcycles.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/graphcycles.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/kernel_timeout.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/kernel_timeout.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/per_thread_sem.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/per_thread_sem.h",
    "${ABSEIL_DIR}/absl/synchronization/internal/waiter_base.cc",
    "${ABSEIL_DIR}/absl/synchronization/internal/waiter_base.h",
    "${ABSEIL_DIR}/absl/synchronization/mutex.cc",
    "${ABSEIL_DIR}/absl/synchronization/mutex.h",
    "${ABSEIL_DIR}/absl/synchronization/notification.cc",
    "${ABSEIL_DIR}/absl/synchronization/notification.h",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_base",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_stacktrace",
    ":absl_symbolize",
    ":absl_time",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_civil_time") {
  sources = [ "${ABSEIL_DIR}/absl/time/internal/cctz/src/civil_time_detail.cc" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  install_enable = true
  cflags = ABSL_DEFAULT_COPTS
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_container") {
  sources = [ "${ABSEIL_DIR}/absl/container/internal/raw_hash_set.cc" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_base",
    ":absl_hash",
  ]

  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_time_zone") {
  sources = [
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_fixed.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_fixed.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_format.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_if.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_if.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_impl.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_impl.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_info.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_info.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_libc.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_libc.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_lookup.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_posix.cc",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/time_zone_posix.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/tzfile.h",
    "${ABSEIL_DIR}/absl/time/internal/cctz/src/zone_info_source.cc",
  ]
  cflags = ABSL_DEFAULT_COPTS
  include_dirs = [ "${ABSEIL_DIR}/" ]
  deps = [ ":absl_civil_time" ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_time") {
  sources = [
    "${ABSEIL_DIR}/absl/time/civil_time.cc",
    "${ABSEIL_DIR}/absl/time/clock.cc",
    "${ABSEIL_DIR}/absl/time/duration.cc",
    "${ABSEIL_DIR}/absl/time/format.cc",
    "${ABSEIL_DIR}/absl/time/internal/get_current_time_chrono.inc",
    "${ABSEIL_DIR}/absl/time/internal/get_current_time_posix.inc",
    "${ABSEIL_DIR}/absl/time/time.cc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_base",
    ":absl_civil_time",
    ":absl_int128",
    ":absl_raw_logging_internal",
    ":absl_strings",
    ":absl_time_zone",
  ]
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_flags") {
  sources = [
    "${ABSEIL_DIR}/absl/flags/commandlineflag.cc",
    "${ABSEIL_DIR}/absl/flags/commandlineflag.h",
    "${ABSEIL_DIR}/absl/flags/internal/commandlineflag.cc",
    "${ABSEIL_DIR}/absl/flags/internal/commandlineflag.h",
    "${ABSEIL_DIR}/absl/flags/internal/flag.cc",
    "${ABSEIL_DIR}/absl/flags/internal/flag.h",
    "${ABSEIL_DIR}/absl/flags/internal/private_handle_accessor.cc",
    "${ABSEIL_DIR}/absl/flags/internal/private_handle_accessor.h",
    "${ABSEIL_DIR}/absl/flags/internal/program_name.cc",
    "${ABSEIL_DIR}/absl/flags/internal/program_name.h",
    "${ABSEIL_DIR}/absl/flags/marshalling.cc",
    "${ABSEIL_DIR}/absl/flags/marshalling.h",
    "${ABSEIL_DIR}/absl/flags/reflection.cc",
    "${ABSEIL_DIR}/absl/flags/reflection.h",
    "${ABSEIL_DIR}/absl/flags/usage_config.cc",
    "${ABSEIL_DIR}/absl/flags/usage_config.h",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  deps = [
    ":absl_base",
    ":absl_container",
    ":absl_hash",
    ":absl_int128",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_str_format_internal",
    ":absl_strings",
    ":absl_sync",
  ]
  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_random") {
  sources = [
    "${ABSEIL_DIR}/absl/random/internal/pool_urbg.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen.h",
    "${ABSEIL_DIR}/absl/random/internal/randen_detect.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_hwaes.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_round_keys.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_slow.cc",
    "${ABSEIL_DIR}/absl/random/internal/randen_slow.h",
    "${ABSEIL_DIR}/absl/random/internal/seed_material.cc",
    "${ABSEIL_DIR}/absl/random/seed_gen_exception.cc",
  ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  deps = [
    ":absl_base",
    ":absl_container",
    ":absl_hash",
    ":absl_int128",
    ":absl_raw_logging_internal",
    ":absl_spinlock_wait",
    ":absl_str_format_internal",
    ":absl_strings",
    ":absl_sync",
  ]
  cflags = ABSL_DEFAULT_COPTS
  public_configs = [ ":absl_public_config" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_bad_optional_access") {
  sources = [ "${ABSEIL_DIR}/absl/types/bad_optional_access.cc" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [ ":absl_raw_logging_internal" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}

ohos_shared_library("absl_bad_variant_access") {
  sources = [ "${ABSEIL_DIR}/absl/types/bad_variant_access.cc" ]
  include_dirs = [ "${ABSEIL_DIR}/" ]
  cflags = ABSL_DEFAULT_COPTS
  deps = [ ":absl_raw_logging_internal" ]
  install_enable = true
  subsystem_name = "${THIRDPARTY_ABSEIL_SUBSYS_NAME}"
  part_name = "${THIRDPARTY_ABSEIL_PART_NAME}"
}
